updated many things